# spartastruct

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-05-spartastruct-design.md
spartastruct/: __init__.py  cli.py  config.py
spartastruct/analyzer/: base.py  base_analyzer.py  js_analyzer.py  python_analyzer.py
spartastruct/diagrams/: __init__.py  api_map.py  class_diagram.py  component_map.py  dfd.py  er_diagram.py  event_flow.py  flowchart.py  function_graph.py  module_graph.py  sequence_diagram.py  state_diagram.py
spartastruct/llm/: client.py  prompts.py
spartastruct/renderer/: markdown_renderer.py  pdf_exporter.py
spartastruct/templates/: structure.md.j2
spartastruct/utils/: file_walker.py  framework_detector.py
templates/: structure.md.j2
tests/: test_analyzer.py  test_cli.py  test_diagrams.py  test_js_analyzer.py  test_llm.py  test_new_diagrams.py  test_pdf_exporter.py  test_renderer.py
tests/fixtures/sample_django/: manage.py
tests/fixtures/sample_django/myapp/: __init__.py  models.py  urls.py  views.py
tests/fixtures/sample_express/: index.js
tests/fixtures/sample_express/models/: User.js
tests/fixtures/sample_express/routes/: users.js
tests/fixtures/sample_fastapi/: main.py  models.py
tests/fixtures/sample_fastapi/repositories/: user_repo.py
tests/fixtures/sample_fastapi/routers/: users.py
tests/fixtures/sample_fastapi/services/: user_service.py
tests/fixtures/sample_plain/: main.py  shapes.py  utils.py
tests/fixtures/sample_ts/: index.ts
tests/fixtures/sample_ts/models/: User.ts
tests/fixtures/sample_ts/services/: UserService.ts
