[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spartastruct"
version = "0.2.1"
description = "Instant architecture diagrams for any Python, JavaScript, or TypeScript project"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yash Randive", email = "yash.randive11@gmail.com" }]
keywords = ["architecture", "diagrams", "mermaid", "code-analysis", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.40",
    "jinja2>=3.1",
    "astroid>=3.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/yashrandive11/spartastruct"
Repository = "https://github.com/yashrandive11/spartastruct"
Issues = "https://github.com/yashrandive11/spartastruct/issues"

[project.scripts]
spartastruct = "spartastruct.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spartastruct*"]

[tool.setuptools.package-data]
spartastruct = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
